--- a/langs/am.json
+++ b/langs/am.json
@@ -73,6 +73,7 @@
               "Գնահատական ։ Սկզբում Ամենաբարձրը"
           ],
           "filter" : "ՖԻԼՏՐ",
+          "filter_by_categories" : "ՖԻԼՏՐԵԼ ԸՍՏ ԿԱՏԵԳՈՐԻԱՅԻ",
           "filter_price" : "ՖԻԼՏՐԵԼ ԸՍՏ ԳՆԻ",
           "home" : "ԳԼԽԱՎՈՐ"
       },
